--- a/photo/photo.kv
+++ b/photo/photo.kv
@@ -1,23 +1,24 @@
 #:kivy 1.0.9
 #:import XCamera kivy_garden.xcamera.XCamera
 
-
-ScreenManager:
-    current: "Capture"
-    Capture:
-    Send:
-
-
 <Capture>
     name: "Capture"
     BoxLayout:
         orientation: 'vertical'
         padding: 10
         size: root.size
-        Label:
-            text: 'Envoi de photo à la PNord'
-            size_hint_y: None
+        BoxLayout:
+            orientation: 'horizontal'
             height: '48dp'
+            Label:
+                text: 'Envoi de photo à la PNord'
+                size_hint_y: None
+                height: '48dp'
+            Button:
+                text: 'Options'
+                size_hint_y: None
+                height: '48dp'
+                on_press: app.open_settings()
         Widget:
             id: proxy
             Camera:
