--- a/photo/photo.kv
+++ b/photo/photo.kv
@@ -1,6 +1,5 @@
 #:kivy 1.0.9
 #:import CameraOpenCV camera_widget
-#:import XCamera kivy_garden.xcamera.XCamera
 
 <Capture>
     name: "Capture"
@@ -8,6 +7,7 @@
         orientation: 'vertical'
         padding: 10
         size: root.size
+
         BoxLayout:
             orientation: 'horizontal'
             size_hint_y: None
@@ -21,7 +21,9 @@
                 size_hint_y: None
                 height: '48dp'
                 on_press: app.open_settings()
-        Widget:
+        RelativeLayout:
+        #Widget:
+            allow_stretch: True
             id: proxy
             CameraOpenCV:
                 id: camera
