--- a/photo/photo.kv
+++ b/photo/photo.kv
@@ -1,50 +1,21 @@
 #:kivy 1.0.9
 #:import CameraOpenCV camera_widget
-#:import XCamera kivy_garden.xcamera.XCamera
 
 <Capture>
     name: "Capture"
-    BoxLayout:
+    MDBoxLayout:
         orientation: 'vertical'
-        padding: 10
-        size: root.size
-        BoxLayout:
-            orientation: 'horizontal'
-            size_hint_y: None
-            height: '48dp'
-            Label:
-                text: 'Envoi de photo à la PNord'
-                size_hint_y: None
-                height: '48dp'
-            Button:
-                text: 'Options'
-                size_hint_y: None
-                height: '48dp'
-                on_press: app.open_settings()
-        Widget:
-            id: proxy
-            CameraOpenCV:
-                id: camera
-                index:0
-                allow_stretch: True
-                keep_ratio: True
-                center: self.size and proxy.center
-                size: proxy.height, proxy.width
-                play: True
-                on_picture_taken: self.picture_taken(*args)
-                canvas.before:
-                    PushMatrix:
-                    Rotate:
-                        angle: -90
-                        origin: self.center
-                canvas.after:
-                    PopMatrix:
+        MDToolbar:
+            title: "My CamerAI"
+#           right_action_items: [["dots-vertical", lambda x: self.root.callback()], ["clock", lambda x: self.root.callback()]]
 
-#        Button:
-#            text: 'Prendre photo'
-#            #on_press: app.picture_taken(*args)
-#            size_hint_y: None
-#            height: '48dp'
+        CameraOpenCV:
+            id: camera
+            index:0
+            allow_stretch: True
+            keep_ratio: True
+            play: True
+            on_picture_taken: self.picture_taken(*args)
 
 <Send>:
     name: "Send"
