chore(nom): renomage fichier de template

--- a/mycamerai/mycamerai.kv
+++ b/mycamerai/mycamerai.kv
@@ -15,6 +15,9 @@
             keep_ratio: True
             play: True
             on_picture_taken: self.picture_taken(*args)
+            Image:
+                source: os.path.join(self.path, "./app/assets/play-circle.svg')
+                pos: root.width / 2, root.height / 2
 
 <Send>:
     name: "Send"
