fix(capture): correction insertion image incorrect

--- a/mycamerai/mycamerai.kv
+++ b/mycamerai/mycamerai.kv
@@ -16,7 +16,7 @@
             play: True
             on_picture_taken: self.picture_taken(*args)
             Image:
-                source: os.path.join(self.path, "./app/assets/play-circle.svg')
+                source: './app/assets/play-circle.svg'
                 pos: root.width / 2, root.height / 2
 
 <Send>:
