--- a/mycamerai/mycamerai.kv
+++ b/mycamerai/mycamerai.kv
@@ -3,22 +3,21 @@
 
 <Capture>
     name: "Capture"
-    MDBoxLayout:
-        orientation: 'vertical'
-        MDToolbar:
-            title: "My CamerAI"
-#           right_action_items: [["dots-vertical", lambda x: self.root.callback()], ["clock", lambda x: self.root.callback()]]
-        CameraOpenCV:
-            id: camera
-            index:0
-            allow_stretch: True
-            keep_ratio: True
-            play: True
-            on_picture_taken: self.picture_taken(*args)
-            Image:
-                source: './app/assets/play-circle.svg'
-                pos: root.width / 2, root.height / 2
-
+    CameraOpenCV:
+        id: camera
+        index:0
+        allow_stretch: True
+        keep_ratio: True
+        play: True
+        on_picture_taken: self.picture_taken(*args)
+        MDIconButton:
+            icon: "guy-fawkes-mask"
+            id: anonymous_icon
+            pos: root.width * 0.1, root.height*0.8
+            user_font_size: (dp(96), dp (96))
+            theme_text_color: "Custom"
+            text_color: (1, 1, 0, 1) if self.parent.faces_detection_active == True else (0,0,1,1)
+            on_press: self.parent.switch_face_detection(self)
 <Send>:
     name: "Send"
     BoxLayout:
