--- a/mycamerai/mycamerai.kv
+++ b/mycamerai/mycamerai.kv
@@ -1,5 +1,5 @@
 #:kivy 1.0.9
-#:import CameraOpenCV camera_widget
+#:import CameraOpenCV widgets.camera_widget
 
 <Capture>
     name: "Capture"
@@ -9,14 +9,14 @@
         allow_stretch: True
         keep_ratio: True
         play: True
-        on_picture_taken: self.picture_taken(*args)
+        on_picture_taken: root.picture_taken(*args)
         MDIconButton:
             icon: "guy-fawkes-mask"
             id: anonymous_icon
             pos: root.width * 0.1, root.height*0.8
             user_font_size: (dp(96), dp (96))
             theme_text_color: "Custom"
-            text_color: (1, 1, 0, 1) if self.parent.faces_detection_active == True else (0,0,1,1)
+            text_color: (1, 1, 0, 1) if root.faces_detection_active == True else (0,0,1,1)
             on_press: self.parent.switch_face_detection(self)
 
 <Editor>:
